_includes/css/amp-theme.css
/* ... */
pre {
  box-sizing: border-box;
  margin: 0 0 1.75em;
  border: #e3edf3 1px solid;
  width: 100%;
  padding: 10px;
  font-size: 14px;
  white-space: pre;
  overflow: auto;
  background: #f7fafb;
  border-radius: 3px;
  line-height: 1.3;
  font-display: swap;
}

.mediumnavigation {
  background: #fff;
  transition: top 0.5s ease-in-out;
  padding: 1.5rem 1rem;
  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.05);
}

.navbar-toggler-right {
  position: absolute;
  right: -2%;
  top: 0;
}

.nav-up {
  box-shadow: none;
}

.site-content {
  padding-top: 2rem;
  margin-top: 57px;
  transition: all 0.4s;
}

section {
  margin-bottom: 20px;
}
section.featured-posts {
  margin-bottom: 30px;
}
section.recent-posts {
  margin-bottom: 0;
}

.hr-h-rule, span.navigation:before, .section-title h2:before {
  margin-bottom: 0;
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  top: 12px;
  height: 1px;
  content: "";
  background-color: #f5f5f5;
}

.section-title h2 {
  font-weight: 700;
  font-size: 1.4rem;
  margin-bottom: 27px;
  position: relative;
}
.section-title h2:before {
  left: 15px;
}
.section-title span {
  background-color: #fff;
  position: relative;
  z-index: 2;
  display: inline-block;
  padding: 0 15px 0 0;
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.layout-page .section-title span {
  font-size: 2rem;
  text-transform: none;
  letter-spacing: 0;
}
.layout-page .section-title h2:before {
  top: 17px;
}

.above-content {
  display: flex;
  justify-content: space-between;
  margin: 1.5rem 0;
}

.prevnextlinks .thepostlink {
  padding: 20px 0;
  font-size: 17px;
  display: block;
  color: #111;
  font-weight: 500;
}
.prevnextlinks {
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
  margin-left: 0;
  margin-right: 0;
}
.prevnextlinks .rightborder {
  border-right: 1px solid #eee;
}

.navbar-toggleable-md .navbar-nav .nav-link.highlight {
  background: #6fd350;
  color: #fff;
  border-radius: 4px;
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
  padding-left: 1em;
  padding-right: 1em;
}

.navbar-toggler {
  z-index: 9999;
}

.navbar-toggleable-md .navbar-nav .nav-link {
  color: #333;
  font-size: 0.94em;
  font-weight: 500;
  letter-spacing: 1px;
  margin-left: 0;
  margin-top: 10px;
  text-transform: uppercase;
}

.mediumnavigation .dropdown-menu {
  margin: 0 0 15px;
  box-shadow: none;
  border: 0;
}

.card-columns .card {
  margin-bottom: 20px;
}

.listfeaturedtag .wrapmeta, .listfeaturedtag .wrapthumbnail {
  position: relative;
  width: 100%;
  min-height: 1px;
  padding: 0 15px;
  max-width: 100%;
  flex: 100%;
}
.listfeaturedtag .wrapmeta {
  padding: 0;
}
.listfeaturedtag .wrapthumbnail {
  height: 250px;
}
.listfeaturedtag .card {
  border: 0;
  border-radius: 2px;
  height: calc(100% - 15px);
  padding-left: 0;
  margin-bottom: 15px;
  box-shadow: 1px 2px 14px 0 rgba(0, 0, 0, 0.2);
}
.listfeaturedtag .card-block {
  padding: 20px 20px 50px;
}
.listfeaturedtag .thumbnail {
  background-size: cover;
  height: 100%;
  display: block;
  background-position: 38% 22%;
  background-origin: border-box;
  border-top-left-radius: 2px;
}
.listfeaturedtag .card-title {
  font-size: 1.3rem;
  font-weight: 500;
  line-height: 1.25;
}

.listrecent .card-title {
  font-size: 1.3rem;
  font-weight: 500;
  line-height: 1.25;
}

.listfeaturedtag .card-title a, .listrecent .card-title a {
  color: #111;
  font-weight: 500;
}
.listfeaturedtag .card-title a:hover, .listrecent .card-title a:hover {
  color: rgba(0, 0, 0, 0.6);
  text-decoration: none;
}

.card-text {
  color: #666;
  font-size: 0.95rem;
  line-height: 1.8;
  font-weight: 400;
}

.listfeaturedtag .wrapfooter {
  position: absolute;
  font-size: 12px;
  display: block;
  width: 100%;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  padding: 20px;
  transform: translateY(30%);
}

.listrecent {
  width: 100%;
}
.listrecent .wrapfooter {
  font-size: 12px;
  margin-top: 30px;
}

.author-thumb {
  width: 40px;
  height: 40px;
  float: left;
  margin-right: 13px;
  border-radius: 100%;
}

.post-top-meta {
  margin-bottom: 1rem;
  margin-top: 3rem;
}
.post-top-meta span {
  font-size: 0.9rem;
  color: rgba(0, 0, 0, 0.44);
  display: inline-block;
}
.post-top-meta .author-thumb {
  width: 72px;
  height: 72px;
}
.post-top-meta.authorpage .author-thumb {
  margin-top: 40px;
}
.post-top-meta .author-description {
  margin-bottom: 5px;
  margin-top: 10px;
  font-size: 0.95rem;
}

.author-meta {
  flex: 1 1 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

div.post-date {
  display: inline-block;
  color: #75748a;
  margin: 7px 0;
  font-size: small;
}

.icon-circle, .share ul li i.fa, span.post-read-more a {
  border: 1px solid #ddd;
  width: 30px;
  height: 30px;
  line-height: 30px;
  text-align: center;
  border-radius: 50%;
}

span.author-meta, span.post-name {
  display: inline-block;
}
span.post-read {
  color: #75748a;
  margin: 7px 0;
}
span.post-read-more a {
  color: #75748a;
  align-items: center;
  float: right;
  border-color: #d0d0d0;
}
span.post-name a, span.post-read-more a:hover {
  color: rgba(0, 0, 0, 0.8);
}

.dot::after {
  content: "·";
  margin-left: 3px;
  margin-right: 3px;
}

.mainheading h1.sitetitle {
  font-family: Georgia, "Times New Roman", Times, serif;
  font-display: swap;
}
.mainheading h1.posttitle {
  font-size: 2.25rem;
  font-weight: 700;
  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
}

.intro {
  background-image: url("https://chriskyfung.github.io/amp-affiliately-jekyll-theme/assets/images/head.svg");
  background-size: contain;
  margin-top: -87px;
  margin-bottom: 3.5rem;
  padding: 3rem 0;
  position: relative;
  z-index: 1;
}
.intro .btn {
  background: #fff100;
  border: 0;
  color: #333;
  border-radius: 3px;
  font-weight: 500;
  padding: 15px 40px;
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
  text-transform: uppercase;
  font-size: 13px;
  letter-spacing: 1px;
}
/* ... */

